ingress-alb/apache.yml
apiVersion: v1
kind: Pod
metadata:
  name: myapp
  labels:
    app: apache
spec:
  containers:
  - name: myapp
    image: httpd:latest
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
    ports:
      - containerPort: 80
