ingress-alb/test-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
  namespace: kube-system
spec:
  serviceAccountName: aws-load-balancer-controller
  containers:
    - name: test-container
      image: amazonlinux
      command: ["/bin/sh", "-c", "sleep 3600"]
